--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primereact": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.11",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
     "web-vitals": "^0.2.4"
