--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "primereact": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
     "react-responsive-carousel": "^3.2.11",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
+    "recompose": "^0.30.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
